[gd_scene load_steps=7 format=3 uid="uid://y0sv0jbg2p80"]

[ext_resource type="Script" uid="uid://b8qe6naj1r1lf" path="res://scripts/control.gd" id="1_06t4h"]
[ext_resource type="Texture2D" uid="uid://pcqsb1jhdiil" path="res://art/menu.png" id="2_wu84c"]
[ext_resource type="Texture2D" uid="uid://66cvkbm623s3" path="res://art/logo.png" id="3_8ln24"]
[ext_resource type="Script" uid="uid://337dqy2taqju" path="res://scripts/modding.gd" id="3_rtw2f"]
[ext_resource type="Script" uid="uid://bv8iohfd3yxy0" path="res://scripts/volume_slider.gd" id="5_rtw2f"]

[sub_resource type="LabelSettings" id="LabelSettings_7vrkn"]
font_size = 32

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="Menu" type="Sprite2D" parent="."]
position = Vector2(568, 274)
texture = ExtResource("2_wu84c")

[node name="base_menu" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_rtw2f")

[node name="Logo" type="Sprite2D" parent="base_menu"]
position = Vector2(972, 180)
texture = ExtResource("3_8ln24")

[node name="Label" type="Label" parent="base_menu"]
layout_mode = 2
text = "SOULS OF METAL"
label_settings = SubResource("LabelSettings_7vrkn")

[node name="Button" type="Button" parent="base_menu"]
layout_mode = 2
text = "Play (NON FUNCTIONAL)"

[node name="Button2" type="Button" parent="base_menu"]
layout_mode = 2
text = "Settings"

[node name="Button4" type="Button" parent="base_menu"]
layout_mode = 2
text = "Mods (NON FUNCTIONAL)"

[node name="Button3" type="Button" parent="base_menu"]
layout_mode = 2
text = "Exit"

[node name="settings" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="settings"]
layout_mode = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_7vrkn")

[node name="divider1" type="Control" parent="settings"]
layout_mode = 2

[node name="mastervollabel" type="Label" parent="settings"]
layout_mode = 2
text = "Master Volume"

[node name="mastervol" type="HSlider" parent="settings"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5
script = ExtResource("5_rtw2f")
volume_offset_db = -50.0

[node name="divider2" type="Control" parent="settings"]
layout_mode = 2

[node name="musicvollabel" type="Label" parent="settings"]
layout_mode = 2
text = "Music volume"

[node name="musicvol" type="HSlider" parent="settings"]
layout_mode = 2
max_value = 1.0
step = 0.001
value = 0.5
script = ExtResource("5_rtw2f")
audio_bus = 1
volume_offset_db = -50.0

[node name="divider3" type="Control" parent="settings"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="settings"]
layout_mode = 2
text = "mute all audio"

[node name="divider4" type="Control" parent="settings"]
layout_mode = 2

[node name="Button" type="Button" parent="settings"]
layout_mode = 2
text = "back"

[node name="Katyusha" type="AudioStreamPlayer" parent="."]
autoplay = true
bus = &"Music"

[connection signal="pressed" from="base_menu/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="base_menu/Button3" to="." method="_on_button_3_pressed"]
[connection signal="value_changed" from="settings/mastervol" to="settings/mastervol" method="set_volume_linear"]
[connection signal="value_changed" from="settings/musicvol" to="settings/musicvol" method="set_volume_linear"]
[connection signal="toggled" from="settings/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="settings/Button" to="." method="_on_button_pressed"]
